# crossplayBot

./: README.md  bootstrap.py  crossplay_bot.py  crossplay_engine.py  dictionary.txt  pyproject.toml  requirements.txt  setup_cython.py
crossplay/: __init__.py  bag.py  board.py  cli.py  constants.py  dictionary.py  engine.py  engine_cy.pyx  gui.py  leave.py  move.py  ocr.py  simulation.py  simulation_cy.pyx  trie.py
