[project]
name = "crossplay-engine"
version = "1.0.0"
description = "Crossplay Engine — screen-reading best-move finder"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mss",
    "Pillow",
    "pytesseract",
    "opencv-python",
    "numpy",
]

[project.scripts]
crossplay-engine = "crossplay_engine:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
